Add "managed by Chef" comments to templates

--- a/templates/default/yum-cron.conf.erb
+++ b/templates/default/yum-cron.conf.erb
@@ -1,3 +1,7 @@
+################################################################################
+# This file is managed by Chef - local changes will be overwritten
+################################################################################
+
 [commands]
 
 # What kind of update to use:
