--- a/templates/default/yum-cron.erb
+++ b/templates/default/yum-cron.erb
@@ -1,3 +1,7 @@
+################################################################################
+# This file is managed by Chef - local changes will be overwritten
+################################################################################
+
 # Pass any given paramter to yum, as run in all the scripts invoked
 # by this package. Be aware that this is global, and yum is invoked in
 # several modes by these scripts for which your own parameter might not be
