--- a/templates/default/yum-updatesd.conf.erb
+++ b/templates/default/yum-updatesd.conf.erb
@@ -1,3 +1,7 @@
+################################################################################
+# This file is managed by Chef - local changes will be overwritten
+################################################################################
+
 [main]
 
 # how often to check for new updates (in seconds)
