Rename the reboot script to make log messages a little nicer

--- a/templates/reboot-if-needed.sh.erb
+++ b/templates/reboot-if-needed.sh.erb
@@ -4,7 +4,7 @@
 # This file is managed by Chef - local changes will be overwritten
 ################################################################################
 
-# autoupdates-reboot-if-needed.sh
+# reboot-if-needed.sh
 # Part of the 'autoupdates' Chef cookbook
 #
 # This script reboots the system if the kernel has been udpated, or if
